# graphrag

./: .gitignore  README.md  pyproject.toml
algoritmos/: 00_preparar_dados_algoritmos.py  01_bfs.py  02_shortest_path.py  03_pagerank.py  04_betweenness.py  05_wcc.py  06_cdlp.py  algoritmos.html  grafo_utils.py
graphrag/: demonstracao_grafos.html  segundo_exemplo.html
graphrag/agents/: 11_agente_langchain.py  12_agente_com_buscas_mais_robustas.py
graphrag/agents/rede_social/: main.py
graphrag/agents/rede_social/agents/: social_agent.py
graphrag/agents/rede_social/config/: settings.py
graphrag/agents/rede_social/database/: connection.py  seed.py
graphrag/agents/rede_social/prompts/: social_prompt.py
graphrag/agents/rede_social/tools/: social_tools.py
graphrag/cypher_examples/: 10_contexto_relacional.py  1_criando_o_grafo_e_os_dados.py  2_buscando_dados_do_grafo.py  3_navegando_pelos_relacionamentos.py  4_filtrando_dados.py  5_order_by_limits.py  6_atualizando_propriedades.py  7_removendo_relacionamentos.py  8_merge.py  9_optional_match.py  main.py
rag/: compose.yaml  consulta.py  conversao.py
rag/tutorial/: 1_como_conectar.md  2_baixar_modelo.md  3_sql.md  4_explicações.md
