[project]
name = "graphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docling>=2.92.0",
    "falkordb>=1.6.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "ollama>=0.6.2",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
]
